# auteur_engineer

./: AGENTS.md  Cargo.toml  README.md  migrate_to_workspace.sh
_docs/: TODO.md  up_and_running.md
_docs/guides/: animations-guidelines.md  animejs-migration.md  brand-guidelines.md  component-guidelines.md  css-guidelines.md  html-guidelines.md  javascript-styleguide.md  state-management-guide.md  templating-guidelines.md  ui-design-guidelines.md  ux-guidelines.md
_docs/instructions/: matthew-frontend.md
_scratch/: data_model.md  rfc_posts.rs  seo.md  todo.md
plat_schema/: Cargo.toml  README.md
plat_schema/src/: lib.rs
plat_schema_macros/: Cargo.toml
public/: main.js  styles.css
src/: main.rs
templates/: index.html  macros.html
website/: Cargo.toml
website/public/: main.js  signal.js  styles.css  use_store.js
website/src/: block_schemas.rs  lib.rs  macro_test.rs  main.rs  schema.rs  schema_v2.rs
website/src/handlers/: counter_handler.rs  counter_handlers.rs  index_handler.rs  mario_index_handler.rs  mod.rs  post_handlers.rs  rpc_handlers.rs
website/src/snapshots/: website__macro_test__html_snapshots__seo_macro__minimal_case.snap
website/src/templates/admin/posts/: [id].html  index.html
website/src/templates/counter/: index.html
website/src/templates/macros/: forms.html
website/src/templates/mario/: index.html
website/src/templates/seo/: macros.html
website/templates/: controls.html  counter.html  index.html  macros.html
website/templates/admin/posts/: [id].html  index.html
website/templates/macros/: blocks.html  forms.html
(+8 files in other folders)
